# Aurora-AI-local-router

./: .gitignore  ANSWERS.md  BENCHMARKING.md  DEPLOYMENT_GUIDE.md  EMBEDDING_UPDATE.md  QUICKSTART.md  README.md  START_HERE.md  TESTING_GUIDE.md  aurora_benchmark_results.json  benchmark_cactus_router.py  benchmark_results.json  benchmark_router.py  lambda_analysis.py  requirements.txt  setup.py  test_router.py  test_router_simple.py  visualize_performance.py
benchmarking/: benchmark_aurora.py  benchmark_router.py  benchmark_showcase.py  test_nomic_profile.py  test_router_with_cactus.py  visualize_performance.py
cactus-final/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UV_MIGRATION.md  pyproject.toml  requirements.txt  setup.sh  verify_setup.py
cactus-final/bindings/: cactus_bindings.py  test_bindings.py
cactus-final/data/: .gitkeep
cactus-final/models/: .gitkeep
cactus-final/profiles/: .gitkeep  production_profile.json
cactus-final/training/: __init__.py  config.py  generate_profile.py  utils.py
cactus-integration/: README.md  VALIDATION_GUIDE.md  VALIDATION_RESULTS.md  cactus-training.pem  test_embed.py
cactus-integration/aws/: build_shared_lib.sh  setup_instance.sh
cactus-integration/models/: .gitkeep
core/: __init__.py  mobile_cluster_engine.py  mobile_router.py  profile_converter.py
notebooks/: 01_profile_cactus_models.ipynb  02_test_routing.ipynb  COLAB_profiling.ipynb
router-native/: INTEGRATION_GUIDE.md
src/: README.md  __init__.py  __main__.py  config.py  router_factory.py
src/benchmarks/: __init__.py  (+3 more)
tests/: test_mobile_router.py
(+36 files in other folders)
