[project]
name = "cactus-router-training"
version = "0.1.0"
description = "AuroraAI Router profile generation with Cactus embeddings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "hdbscan>=0.8.33",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
mock = [
    "sentence-transformers>=2.2.0",
]

viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "umap-learn>=0.5.3",
]

dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
